// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verificationCode > render correctly with error as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_i_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_i_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_i_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_i_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1n style_undefined_compound_72__m4c9ow3f"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with error as string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_g_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_g_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_g_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_g_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1n style_undefined_compound_72__m4c9ow3f"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_c_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_c_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_c_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_c_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
        for="_r_e_-0"
        id="_r_e_-label"
      >
        test
      </label>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_e_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_e_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_e_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_e_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          for="_r_n_-0"
          id="_r_n_-label"
        >
          test
        </label>
        <span>
          description
        </span>
      </div>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_n_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_n_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_n_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_n_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_small__1k9synd2 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_b_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_small__1k9synd2 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_b_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_small__1k9synd2 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_b_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_small__1k9synd2 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_b_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="0"
          id="_r_k_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="1"
          id="_r_k_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="2"
          id="_r_k_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="3"
          id="_r_k_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="0"
          id="_r_l_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="1"
          id="_r_l_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="2"
          id="_r_l_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="true"
          data-testid="3"
          id="_r_l_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_success__m4c9owh style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_16__m4c9ow1v style_undefined_compound_72__m4c9ow3f"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_0_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_0_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_0_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_0_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_1_-0"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_1_-1"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_1_-2"
          pattern="[0-9]*"
          placeholder="3"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_1_-3"
          pattern="[0-9]*"
          placeholder="7"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="4"
          id="_r_1_-4"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="5"
          id="_r_1_-5"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_4_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_4_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_4_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_4_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_9_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_9_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_9_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_9_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1n style_undefined_compound_72__m4c9ow3f"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_2_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_2_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_2_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_2_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste when type is not number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_7_-0"
          placeholder=""
          type="text"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_7_-1"
          placeholder=""
          type="text"
          value="h"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_7_-2"
          placeholder=""
          type="text"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_7_-3"
          placeholder=""
          type="text"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="4"
          id="_r_7_-4"
          placeholder=""
          type="text"
          value="a"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="5"
          id="_r_7_-5"
          placeholder=""
          type="text"
          value="*"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_3_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_3_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_3_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_3_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_5_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_5_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_5_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_5_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          id="_r_6_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          id="_r_6_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          id="_r_6_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          id="_r_6_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should render correctly disabled true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__1k9synd5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="0"
          disabled=""
          id="_r_p_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="1"
          disabled=""
          id="_r_p_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="2"
          disabled=""
          id="_r_p_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__1k9synd0 styles__1k9synd4"
          data-success="false"
          data-testid="3"
          disabled=""
          id="_r_p_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
